--- a/4/package.json
+++ b/4/package.json
@@ -56,10 +56,12 @@
         "class-variance-authority": "^0.7.1",
         "clsx": "^2.1.1",
         "concurrently": "^9.0.1",
+        "framer-motion": "^12.23.22",
         "immer": "^10.1.3",
         "input-otp": "^1.4.2",
         "laravel-vite-plugin": "^2.0",
         "lucide-react": "^0.475.0",
+        "motion": "^12.23.22",
         "react": "^19.1.1",
         "react-dom": "^19.1.1",
         "tailwind-merge": "^3.0.1",
